Fix SVGImage::imageForCurrentFrameForContainer() sizing

SVGImageForContainer implements the Image interface, and reports a size
equal to the container size.

But its imageForCurrentFrame() implementation delegates to
SVGImage::imageForCurrentFrameForContainer(), which currently returns an
SkImage with a size equal to the SVG intrinsic size.

This mismatch between the size reported by SVGImageForContainer and the
size of the SkImage returned by its imageForCurrentFrame() is causing
problems when tiling.

The CL updates SVGImage::imageForCurrentFrameForContainer() to return an
SkImage reflecting the container size instead of intrinsic size.

New pixel test: fast/backgrounds/background-svg-scaling.html

BUG=632969,633637
R=schenney@chromium.org, pdr@chromium.org, fs@opera.com

Review-Url: https://codereview.chromium.org/2203093003
Cr-Commit-Position: refs/heads/master@{#409853}

Former-commit-id: 8148eedf1595dab9ec126e3e20403bad53021db9